--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
             <a href="images.html" style="font-family:Architects Daughter;font-size:40px;color:d52941">IMAGES|</a>
             <a href="insta.html" style="font-family:Architects Daughter;font-size:40px;color:d52941">INSTAGRAM</a>
             <hr size=6 color=#FFB6C1>
-            <marquee> <img src="img/kitty.jpg" alt="kitty" width=400 height=400></marquee>
-            <marquee>
-                <p>Follow me @prettykitty.2019! 😻😸😺</p>
-            </marquee>
+            <marquee> <img src="img/kitty.jpg" alt="kitty" width=400 height=400><br><p>Follow me @prettykitty.2019! 😻😸😺</p></marquee>
             <img src="img/kitty1.jpg" alt="kitty" width=400 height=400>
             <img src="img/kitty2.jpg" alt="kitty" width=400 height=400>
             <img src="img/kitty3.jpg" alt="kitty" width=400 height=400>
